# airbnb_host_copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 00_overview.md  01_setup.md  02_data_prep.md  03_chunking_embeddings.md  04_search_numpy.md  05_faiss.md  06_chroma.md  07_retrieval.md  08_analytics_tools.md  09_llm_abstraction.md  10_agentic_rag.md  11_api.md  12_docker.md  13_eval_monitoring.md  DATA.md
notebooks/: exploration.ipynb
src/host_copilot/: __init__.py  api.py  config.py  documents.py  embeddings.py  eval.py  ingest.py  llm.py  pipeline.py  retrieval.py
src/host_copilot/data/: loaders.py
src/host_copilot/tools/: occupancy.py  pricing.py  sentiment.py
src/host_copilot/vectorstore/: chroma_store.py  faiss_store.py  numpy_store.py
tests/: test_config.py  test_loaders.py
