[project]
name = "host-copilot"
version = "0.1.0"
description = "RAG + analytics decision-support assistant for Airbnb hosts (Bordeaux)."
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "ipykernel>=7.2.0",
    # RAG + analytics
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "rank-bm25>=0.2.2",
    "duckdb>=1.1.0",
    # LLM backends (configurable)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "ollama>=0.3.0",
    # service + config
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Install the package (editable) so `uv run python -c "import host_copilot"` works from any cwd.
[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/host_copilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]